--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,6 +34,12 @@
             android:label="@string/app_name" >
         </activity>
 
+        <activity
+            android:name=".ForgetPassword"
+            android:screenOrientation="portrait"
+            android:label="@string/app_name" >
+        </activity>
+
 
     </application>
 
